Add packaging functionality for Arch Linux, add .gitignore

--- a/data/config.ini
+++ b/data/config.ini
@@ -1,2 +1,5 @@
+[dock]
+icon_size=40
+
 [pinned]
-apps=org.gnome.Nautilus.desktop,chromium.desktop,Alacritty.desktop,nvim.desktop,org.pwnt.zathura.desktop,localsend.desktop
+apps=org.gnome.Nautilus.desktop,chromium.desktop,Alacritty.desktop,nvim.desktop,localsend.desktop,code.desktop
